--- a/src/styles/landingPage.css
+++ b/src/styles/landingPage.css
@@ -1,39 +1,51 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap");
 :root {
-    --main-bg-color: #C8B5A6;
-  }
-
+  --main-bg-color: #c8b5a6;
+}
 
 body {
-    background-color: var(--main-bg-color);
-    
+  background-color: var(--main-bg-color);
 }
 
-.landing-page{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Quicksand', sans-serif;
-    color: white;
-    height: 100vh;
-  
+.landing-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: "Quicksand", sans-serif;
+  color: white;
+  height: 100vh;
 }
 
-.landing-logo{
-    background-color: black;
-    text-align: center;
-    width: 60%;
-    height:60%;
+.landing-logo {
+  text-align: center;
+  width: 30rem;
+  height: 30rem;
+  border-radius: 50%;
+  background: #B69995;
+  text-align: center;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
+  0 2px 2px rgba(0,0,0,0.12), 
+  0 4px 4px rgba(0,0,0,0.12), 
+  0 8px 8px rgba(0,0,0,0.12),
+  0 16px 16px rgba(0,0,0,0.12);
 }
 
-h1{
-    font-size: 4rem;
-    margin: 0;
+h1 {
+  font-size: 6rem;
+  margin: 0;
+  margin-top: 1rem;
 }
 
-h2{
-    font-size: 3rem;
-    margin: 0;
+h2 {
+  font-size: 5rem;
+  margin: 0;
+  margin-top: 1rem;
+
+}
+
+h3 {
+  font-size: 2rem;
+  margin: 0;
+  margin-top: 2rem;
 }
