Adding key frames

--- a/src/styles/landingPage.css
+++ b/src/styles/landingPage.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap");
+
 :root {
   --main-bg-color: #c8b5a6;
 }
@@ -12,7 +13,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: "Quicksand", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: white;
   height: 100vh;
 }
@@ -22,30 +23,82 @@ body {
   width: 30rem;
   height: 30rem;
   border-radius: 50%;
-  background: #B69995;
+  background: #b69995;
   text-align: center;
-  box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
-  0 2px 2px rgba(0,0,0,0.12), 
-  0 4px 4px rgba(0,0,0,0.12), 
-  0 8px 8px rgba(0,0,0,0.12),
-  0 16px 16px rgba(0,0,0,0.12);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12),
+    0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12),
+    0 16px 16px rgba(0, 0, 0, 0.12);
 }
 
+
 h1 {
-  font-size: 6rem;
+  font-size: 5rem;
   margin: 0;
-  margin-top: 1rem;
+  margin-top: 2rem;
+  animation: fadeInText 700ms 0ms forwards;
 }
 
 h2 {
-  font-size: 5rem;
+  font-size: 4rem;
   margin: 0;
-  margin-top: 1rem;
-
+  margin-top: 2rem;
+  animation: fadeInText 700ms 0ms forwards;
+  /* animation-delay: 300ms; */
 }
 
 h3 {
   font-size: 2rem;
   margin: 0;
-  margin-top: 2rem;
+  margin-top: 3rem;
+  animation: fadeInText 700ms 0ms forwards;
+  /* animation-delay: 300ms; */
 }
+
+@keyframes fadeInText {
+  from {
+    transform: translateY(-400%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+/* 320px — 480px: Mobile devices. */
+@media (min-height: 500px) and (min-width: 580px) {
+  /* CSS stuff */
+}
+/* 481px — 768px: iPads, Tablets. */
+@media (max-height: 768px) and (max-width: 481px) {
+  /* CSS stuff */
+  .landing-logo {
+    height: 25rem;
+    width: 25rem;
+  }
+
+  h1 {
+    font-size: 4rem;
+  }
+  h2 {
+    font-size: 3rem;
+  }
+  h3 {
+    font-size: 2rem;
+    margin-top: 2rem;
+  }
+}
+/* 769px — 1024px: Small screens, laptops. */
+@media (min-height: 500px) and (min-width: 580px) {
+  /* CSS stuff */
+}
+
+/* 1025px — 1200px: Desktops, large screens. */
+@media (min-height: 500px) and (min-width: 580px) {
+  /* CSS stuff */
+}
+/* 
+1201px and more — Extra large screens, TV. */
+@media (min-height: 500px) and (min-width: 580px) {
+  /* CSS stuff */
+}
+
