--- a/src/styles/landingPage.css
+++ b/src/styles/landingPage.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap');
 
 :root {
   --main-bg-color: #c8b5a6;
@@ -13,7 +14,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: "Montserrat", sans-serif;
+  /* font-family: "Montserrat", sans-serif; */
+  font-family: 'Playfair Display', serif;
   color: white;
   height: 100vh;
 }
@@ -37,6 +39,9 @@ h1 {
   transform: translateY(400%);
   margin-top: 2rem;
   animation: fadeInText 700ms 0ms forwards;
+  /* text-shadow: 2px 3px 5px rgba(0,0,0,0.5); */
+
+  
 
 }
 
@@ -47,6 +52,8 @@ h2 {
   margin-top: 2rem;
   animation: fadeInText 700ms 0ms forwards;
   animation-delay: 300ms;
+  /* text-shadow: 2px 3px 5px rgba(0,0,0,0.5); */
+
 
 }
 
@@ -58,6 +65,8 @@ h3 {
   transform: translateY(800%);
   animation: fadeInText 700ms 0ms forwards;
   animation-delay: 500ms;
+  /* text-shadow: 2px 3px 5px rgba(0,0,0,0.5); */
+
 
   /* animation-delay: 300ms; */
 }
