--- a/src/styles/landingPage.css
+++ b/src/styles/landingPage.css
@@ -14,7 +14,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* font-family: "Montserrat", sans-serif; */
   font-family: 'Playfair Display', serif;
   color: white;
   height: 100vh;
@@ -27,34 +26,30 @@ body {
   border-radius: 50%;
   background: #b69995;
   text-align: center;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12),
+  /* box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12),
     0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12),
-    0 16px 16px rgba(0, 0, 0, 0.12);
+    0 16px 16px rgba(0, 0, 0, 0.12); */
 }
 
 
 h1 {
   font-size: 5rem;
   margin: 0;
-  transform: translateY(400%);
+  opacity: 0;
+  transform: translateY(20px);
   margin-top: 2rem;
   animation: fadeInText 700ms 0ms forwards;
-  /* text-shadow: 2px 3px 5px rgba(0,0,0,0.5); */
 
-  
 
 }
 
 h2 {
   font-size: 4rem;
   margin: 0;
-  transform: translateY(600%);
+  transform: translateY(800%);
   margin-top: 2rem;
   animation: fadeInText 700ms 0ms forwards;
   animation-delay: 300ms;
-  /* text-shadow: 2px 3px 5px rgba(0,0,0,0.5); */
-
-
 }
 
 
@@ -62,7 +57,7 @@ h3 {
   font-size: 2rem;
   margin: 0;
   margin-top: 3rem;
-  transform: translateY(800%);
+  transform: translateY(1000%);
   animation: fadeInText 700ms 0ms forwards;
   animation-delay: 500ms;
   /* text-shadow: 2px 3px 5px rgba(0,0,0,0.5); */
@@ -82,8 +77,44 @@ h3 {
   }
 }
 /* 320px — 480px: Mobile devices. */
-@media (min-height: 500px) and (min-width: 580px) {
-  /* CSS stuff */
+
+@media (max-height: 667px) and (max-width: 375px) {
+  .landing-logo {
+    height: 19rem !important; 
+    width: 19rem !important;
+  }
+
+  h1 {
+    font-size: 3rem !important; 
+  }
+  h2 {
+    margin-top: 0;
+    font-size: 2rem !important;
+  }
+  h3 {
+    font-size: 1.5rem !important;
+    margin-top: 1rem !important;
+  }
+
+
+}
+@media (max-height: 812px) and (max-width: 375px) {
+  
+  .landing-logo {
+    height: 20rem;
+    width: 20rem;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
+  h3 {
+    font-size: 1rem;
+    margin-top: 1rem;
+  }
 }
 /* 481px — 768px: iPads, Tablets. */
 @media (max-height: 768px) and (max-width: 481px) {
@@ -105,17 +136,17 @@ h3 {
   }
 }
 /* 769px — 1024px: Small screens, laptops. */
-@media (min-height: 500px) and (min-width: 580px) {
+@media (max-height: 500px) and (max-width: 580px) {
   /* CSS stuff */
 }
 
 /* 1025px — 1200px: Desktops, large screens. */
-@media (min-height: 500px) and (min-width: 580px) {
+@media (max-height: 500px) and (max-width: 580px) {
   /* CSS stuff */
 }
 /* 
 1201px and more — Extra large screens, TV. */
-@media (min-height: 500px) and (min-width: 580px) {
+@media (max-height: 500px) and (max-width: 580px) {
   /* CSS stuff */
 }
 
