--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,19 +1,34 @@
+section {
+  height: 100vh;
+}
 .header {
   display: flex;
   flex-direction: column;
   margin: 1rem;
-  /* justify-content: center;
-    align-items: center; */
+  height: 100%;
+}
+
+h1 {
+  font-size: 3rem;
+  margin-bottom: .5rem;
+}
+
+p{
+  margin: 0;
+  font-size: 1.5rem;
 }
 
 button {
-  margin: 0.5rem;
+  margin-top: 2rem;
+  display: block;
 }
 
 .headshot {
-  height: 60vh;
-  width: 100vw;
-  float: left;
+  position: absolute;
+  bottom: 0;
+  height: 50vh;
+  width: 90vw;
+  right:0;
 }
 .headshot img {
   float: right;
