--- a/src/styles/experiencePage.css
+++ b/src/styles/experiencePage.css
@@ -1,4 +1,8 @@
-div {
+
+.experience-page{
     height: 100vh;
-    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
