--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -4,8 +4,13 @@
     flex-direction: column;
     align-items: center;
     height: 13rem;
-    width: 13rem;
+    width: 20rem;
     background-color: white;
-    border-radius: 50%;
+    border-radius: 1%;
+    margin-bottom: 1rem;
     
+}
+
+h1 {
+    margin-bottom: 1rem;
 }
