--- a/src/styles/experiencePage.css
+++ b/src/styles/experiencePage.css
@@ -6,3 +6,15 @@
     align-items: center;
 }
 
+
+/* ipad  */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+    /* .experience-page{
+        align-items: flex-start;
+    } */
+
+}
