--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -9,8 +9,29 @@
     border-radius: 1%;
     margin-bottom: 1rem;
     
+    
 }
 
 h1 {
     margin-bottom: 1rem;
+}
+
+img {
+   max-width: 100%;
+   max-height: 100%;
+}
+/* ipad  */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+   .card {
+       height: 30rem;
+       
+       flex-direction: row;
+       width: 90vw;
+   }
+  
+
 }
