screwed up styling

--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   height: 18rem;
-  width: 22rem;
+  width: 80vw;
   border-radius: 1%;
   margin-bottom: 1rem;
 }
