--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,21 +1,29 @@
+
 section {
   height: 100vh;
+  max-width: 100vw;
+  
+  
 }
 .header {
   display: flex;
   flex-direction: column;
-  margin: 1rem;
+  /* margin: 1rem; */
   height: 100%;
+  
 }
 
 h1 {
   font-size: 3rem;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
+
 }
 
-p{
+p {
   margin: 0;
-  font-size: 1.5rem;
+  font-size: 1rem;
+  
+  overflow-wrap: break-word;
 }
 
 button {
@@ -24,71 +32,46 @@ button {
 }
 
 .headshot {
-  position: absolute;
-  bottom: 0;
+  position: relative;
+  
+  right: 0;
+  /* bottom: 0 !important; */
   height: 50vh;
-  width: 90vw;
-  right:0;
+  /* background-color: red !important; */
+
 }
 .headshot img {
   float: right;
   max-width: 100%;
   max-height: 100%;
 }
-.div {
-  display: block;
-  position: relative;
-  top: -2px;
-  height: 211px;
-  background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1440 211" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="rgba(232, 199, 200, 1)" d="M 0 50 C 219.29999999999998 50 511.70000000000005 110 731 110 L 731 110 L 731 0 L 0 0 Z" stroke-width="0"></path> <path fill="rgba(232, 199, 200, 1)" d="M 730 110 C 943 110 1227 35 1440 35 L 1440 35 L 1440 0 L 730 0 Z" stroke-width="0"></path> </svg>');
-  background-size: cover;
-  background-repeat: no-repeat;
- }
- 
- @media (max-width:1439px) {
-  .div {
-    background-size: contain;
-  }
- }
- 
 
 /* ipad  */
-@media only screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 1024px) 
-  and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  h1 {
+    font-size: 5rem;
+    margin-bottom: 1rem;
+  }
 
-    h1 {
-      font-size: 5rem;
-      margin-bottom: 1rem;
-    }
-
-    button {
-      margin-top: 2rem;
-      display: inline-block;
-      margin-right: 1rem;
-    }
-
+  button {
+    margin-top: 2rem;
+    display: inline-block;
+    margin-right: 1rem;
+  }
 }
 
 /* laptop */
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  { 
-    .headshot {
-      position: absolute;
-      bottom: 0;
-      height: 70vh;
-      width: 90vw;
-      right:0;
-      
-    }
-    /* .headshot img {
+@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) {
+  .headshot {
+    position: absolute;
+    bottom: 0;
+    height: 70vh;
+    width: 90vw;
+    right: 0;
+  }
+  /* .headshot img {
       float: right;
       max-width: 100%;
       max-height: 100%;
     } */
-
 }
-
