--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,28 +1,27 @@
-
 section {
   height: 100vh;
   max-width: 100vw;
-  
-  
+}
+
+.intro {
+  margin: 1rem;
 }
 .header {
   display: flex;
   flex-direction: column;
   /* margin: 1rem; */
   height: 100%;
-  
 }
 
 h1 {
   font-size: 3rem;
   margin-bottom: 0.5rem;
-
 }
 
 p {
   margin: 0;
   font-size: 1rem;
-  
+
   overflow-wrap: break-word;
 }
 
@@ -32,13 +31,12 @@ button {
 }
 
 .headshot {
-  position: relative;
-  
-  right: 0;
-  /* bottom: 0 !important; */
-  height: 50vh;
-  /* background-color: red !important; */
+  position: absolute;
+  bottom: 0;
 
+  right: 0;
+
+  height: 50vh;
 }
 .headshot img {
   float: right;
@@ -58,9 +56,11 @@ button {
     display: inline-block;
     margin-right: 1rem;
   }
+  /* .headshot {
+    
+  } */
 }
 
-/* laptop */
 @media screen and (min-device-width: 1200px) and (max-device-width: 1600px) {
   .headshot {
     position: absolute;
