--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -1,36 +1,15 @@
 .card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 18rem;
-  width: 80vw;
-  border-radius: 1%;
-  margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 13rem;
+    width: 20rem;
+    background-color: white;
+    border-radius: 1%;
+    margin-bottom: 1rem;
+    
 }
 
-.card-info {
-  width: 100%;
-  height: 30%;
-  
-}
-
-.card h2 {
-  margin: 0;
-  margin-top: 1rem;
-}
-
-.card img {
-  /* max-width: 110%;
-   max-height: 70%; */
-  width: 100%;
-  height: 70%;
-}
-/* ipad  */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
-  .card {
-    height: 30rem;
-
-    flex-direction: row;
-    width: 90vw;
-  }
+h1 {
+    margin-bottom: 1rem;
 }
