--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -55,23 +55,32 @@ button {
     margin-top: 2rem;
     display: inline-block;
     margin-right: 1rem;
+    font-size: 2rem;
   }
-  /* .headshot {
-    
-  } */
+  p {
+    font-size: 3rem;
+  }
+  h3 {
+    font-size: 3rem;
+  }
 }
 
 @media screen and (min-device-width: 1200px) and (max-device-width: 1600px) {
   .headshot {
-    position: absolute;
-    bottom: 0;
     height: 70vh;
     width: 90vw;
-    right: 0;
+    
   }
-  /* .headshot img {
-      float: right;
-      max-width: 100%;
-      max-height: 100%;
-    } */
+  button {
+    margin-top: 2rem;
+    display: inline-block;
+    margin-right: 1rem;
+    font-size: 1.5rem;
+  }
+
+  p {
+    font-size: 2rem;
+    width: 50%;
+  }
+  
 }
