--- a/src/styles/experiencePage.css
+++ b/src/styles/experiencePage.css
@@ -4,5 +4,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* margin-top: 2rem; */
 }
 
+section {
+    position: relative;
+    padding-top: 5rem;
+}
