--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -11,6 +11,7 @@ section {
   flex-direction: column;
   /* margin: 1rem; */
   height: 100%;
+  position: relative;
 }
 
 h1 {
@@ -33,10 +34,10 @@ button {
 .headshot {
   position: absolute;
   bottom: 0;
-
   right: 0;
-
   height: 50vh;
+  overflow: hidden;
+  margin-bottom: 1rem;
 }
 .headshot img {
   float: right;
