--- a/src/styles/experiencePage.css
+++ b/src/styles/experiencePage.css
@@ -1,13 +1,20 @@
 
 .experience-page{
-    height: 100vh;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     /* margin-top: 2rem; */
 }
 
-section {
-    position: relative;
+.experience-page img {
+    height: 100%;
+    width: 100%;
+}
+
+
+.experience-page section {
+    min-height: 100vh;
     padding-top: 5rem;
+    margin-bottom: 15rem;
 }
