--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -9,7 +9,6 @@ section {
 .header {
   display: flex;
   flex-direction: column;
-  /* margin: 1rem; */
   height: 100%;
   position: relative;
 }
@@ -37,13 +36,14 @@ button {
   right: 0;
   height: 50vh;
   overflow: hidden;
-  margin-bottom: 1rem;
+  
 }
 .headshot img {
   float: right;
   max-width: 100%;
   max-height: 100%;
 }
+
 
 /* ipad  */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
@@ -66,7 +66,7 @@ button {
   }
 }
 
-@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) {
+@media screen and (min-device-width: 1200px) {
   .headshot {
     height: 70vh;
     width: 90vw;
