--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -1,13 +1,13 @@
 .card {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     height: 13rem;
     width: 20rem;
-    background-color: white;
+    background-color:yellow;
     border-radius: 1%;
-    margin-bottom: 1rem;
-    
+    margin-bottom: 6rem;
+    text-align: left;
 }
 
 h1 {
