--- a/src/styles/experiencePage.css
+++ b/src/styles/experiencePage.css
@@ -18,3 +18,15 @@
     padding-top: 5rem;
     margin-bottom: 15rem;
 }
+
+
+/* ipad */
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1199px) and (-webkit-min-device-pixel-ratio: 1) {
+
+    .experience-page {
+      align-items: flex-start;
+      margin: 1rem;
+    }
+
+}
