--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,7 +4,14 @@ footer {
   display: flex;
   flex-direction: column;
 }
-
+/* 
 .footer-btns {
   
+} */
+
+button {
+  display: inline-block;
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1199px) and (-webkit-min-device-pixel-ratio: 1) {
 }
