--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -46,7 +46,7 @@ button {
 
 
 /* ipad  */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1199px) and (-webkit-min-device-pixel-ratio: 1) {
   h1 {
     font-size: 5rem;
     margin-bottom: 1rem;
@@ -67,6 +67,10 @@ button {
 }
 
 @media screen and (min-device-width: 1200px) {
+  h3 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
   .headshot {
     height: 70vh;
     width: 90vw;
