--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -1,15 +1,39 @@
 .card {
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-    height: 13rem;
-    width: 20rem;
-    background-color:yellow;
-    border-radius: 1%;
-    margin-bottom: 6rem;
-    text-align: left;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  height: 13rem;
+  width: 20rem;
+  background-color: yellow;
+  border-radius: 1%;
+  margin-bottom: 6rem;
+  text-align: left;
 }
 
-h1 {
-    margin-bottom: 1rem;
+.card h1 {
+  margin-bottom: 1rem;
+}
+
+/* ipad */
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1199px) and (-webkit-min-device-pixel-ratio: 1) {
+  .card {
+      flex-direction: row;
+      margin-bottom: 3rem;
+      height: 15rem;
+      width: 22rem;
+  }
+
+  .card p {
+      font-size: 1rem;
+  }
+
+  .name-description {
+    flex-direction: column;
+    margin-left: 2rem;
+  }
+
+  .card h3 {
+      font-size: 2rem;
+  }
 }
