--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -6,7 +6,7 @@
   width: 20rem;
   background-color: yellow;
   border-radius: 1%;
-  margin-bottom: 6rem;
+  margin-bottom: 7rem;
   text-align: left;
 }
 
@@ -14,14 +14,15 @@
   margin-bottom: 1rem;
 }
 
+
 /* ipad */
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1199px) and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 768px) and (-webkit-min-device-pixel-ratio: 1) {
   .card {
       flex-direction: row;
       margin-bottom: 3rem;
       height: 15rem;
-      width: 22rem;
+      width: 100%;
   }
 
   .card p {
@@ -31,9 +32,14 @@
   .name-description {
     flex-direction: column;
     margin-left: 2rem;
+    
   }
 
   .card h3 {
       font-size: 2rem;
+      margin: 0;
+      padding-bottom: 1rem;
+      padding-top: 1rem;
   }
+
 }
