Updating index.html

--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -4,7 +4,7 @@
   /* align-items: center; */
   height: 13rem;
   width: 20rem;
-  background-color: yellow;
+  
   border-radius: 1%;
   margin-bottom: 7rem;
   text-align: left;
@@ -20,19 +20,26 @@
 @media only screen and (min-device-width: 768px) and (-webkit-min-device-pixel-ratio: 1) {
   .card {
       flex-direction: row;
+      justify-content: center !important;
+    
       margin-bottom: 3rem;
       height: 15rem;
-      width: 100%;
+      width: 90%;
+      /* background-color: white; */
   }
 
   .card p {
-      font-size: 1rem;
+      font-size: 2rem;
   }
 
   .name-description {
     flex-direction: column;
     margin-left: 2rem;
+    max-width: 50%;
     
+  }
+  .card img {
+    max-width: 50%;
   }
 
   .card h3 {
@@ -42,4 +49,28 @@
       padding-top: 1rem;
   }
 
+}
+
+@media screen and (min-device-width: 1200px) {
+
+
+
+/* .name-description {
+  flex-direction: column;
+  margin-left: 2rem;
+  max-width: 50%;
+  
+} */
+/* .card img {
+  max-width: 20%;
+} */
+
+.card h3 {
+    font-size: 2rem;
+    margin: 0;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+}
+
+  
 }
