--- a/src/styles/experiencePage.css
+++ b/src/styles/experiencePage.css
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* margin-top: 2rem; */
 }
 
 .experience-page img {
@@ -22,15 +21,24 @@
 
 /* ipad */
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1199px) and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 768px) and (-webkit-min-device-pixel-ratio: 1) {
 
     .experience-page {
-      align-items: flex-start;
-      margin: 1rem;
+      /* align-items: flex-start; */
+      height: auto;
+      margin: 1.5rem;
+      
+
     }
 
     .experience-page h2 {
-        font-size: 2rem;
+        font-size: 3rem;
     }
+    .experience-page section {
+        height: 100vh;
+        padding-top: 5rem;
+        margin-bottom: 0rem;
+    }
+    
 
 }
