--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,13 +4,11 @@ footer {
   display: flex;
   flex-direction: column;
 }
-/* 
-.footer-btns {
-  
-} */
 
-button {
+.footer button {
   display: inline-block;
+  margin: 0; 
+  margin-right: .5rem;
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1199px) and (-webkit-min-device-pixel-ratio: 1) {
