--- a/src/styles/experiencePage.css
+++ b/src/styles/experiencePage.css
@@ -4,6 +4,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 5rem;
+    height: 100%;
+    margin-bottom: 15rem;
+    
+    
 }
 
 .experience-page img {
@@ -16,6 +21,9 @@
     min-height: 100vh;
     padding-top: 5rem;
     margin-bottom: 15rem;
+  
+    
+
 }
 
 
