--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,8 +1,13 @@
-
 footer {
+  
+}
+.footer {
   margin: 1rem;
   display: flex;
   flex-direction: column;
+  bottom: 0;
+
+
 }
 
 .footer button {
