--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -23,8 +23,8 @@
       justify-content: center !important;
     
       margin-bottom: 3rem;
-      height: 15rem;
-      width: 90%;
+      height:18rem !important;
+      width: 40rem !important;
       /* background-color: white; */
   }
 
