--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -51,34 +51,29 @@
   .card p {
       font-size: 1.5rem;
   }
-/* 
-
-  .card img {
-    max-width: 50%;
-  }
-
-  .card h3 {
-      font-size: 2rem;
-      margin: 0;
-      padding-bottom: 1rem;
-      padding-top: 1rem;
-  } */
-
 }
 
 @media screen and (min-device-width: 1200px) {
 
 
+  .card {
+    width: 60rem;
 
+}
 /* .name-description {
   flex-direction: column;
   margin-left: 2rem;
   max-width: 50%;
   
 } */
-/* .card img {
-  max-width: 20%;
-} */
+.card img {
+  width: 60%;
+  height: 90%;
+}
+
+.card p{
+  width: 100%;
+}
 
 .card h3 {
     font-size: 2rem;
