--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -28,7 +28,23 @@ p {
 button {
   margin-top: 2rem;
   display: block;
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	outline: inherit;
 }
+button:hover {
+  cursor: pointer;
+
+
+} 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 
 .headshot {
   position: absolute;
@@ -36,6 +52,7 @@ button {
   right: 0;
   height: 50vh;
   overflow: hidden;
+  width: 30% !important;
   
 }
 .headshot img {
