--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,6 +5,7 @@ section {
 
 .intro {
   margin: 1rem;
+  min-height: 100vh;
 }
 .header {
   display: flex;
@@ -28,15 +29,21 @@ p {
 button {
   margin-top: 2rem;
   display: block;
+  /* 
   background: none;
 	color: inherit;
 	border: none;
-	padding: 0;
+	padding: .5rem;
 	font: inherit;
-	outline: inherit;
+	width: fit-content;
+  border-radius: 15px;
+  transition: all 300ms ease-in; */
+  /* transition: border-radius 500ms ease-out; */
 }
 button:hover {
   cursor: pointer;
+  background-color: rgb(123, 214, 223);
+  
 
 
 } 
@@ -52,7 +59,7 @@ a {
   right: 0;
   height: 50vh;
   overflow: hidden;
-  width: 30% !important;
+  
   
 }
 .headshot img {
@@ -64,6 +71,10 @@ a {
 
 /* ipad  */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1199px) and (-webkit-min-device-pixel-ratio: 1) {
+
+  .headshot{
+    width: 30% !important;
+  }
   h1 {
     font-size: 5rem;
     margin-bottom: 1rem;
