--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -8,6 +8,7 @@ section {
   min-height: 100vh;
 }
 .header {
+  
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -27,18 +28,19 @@ p {
 }
 
 button {
+  
   margin-top: 2rem;
   display: block;
-  /* 
+  
   background: none;
 	color: inherit;
 	border: none;
 	padding: .5rem;
 	font: inherit;
-	width: fit-content;
+	/* width: fit-content; */
   border-radius: 15px;
-  transition: all 300ms ease-in; */
-  /* transition: border-radius 500ms ease-out; */
+  transition: all 300ms ease-in; 
+  
 }
 button:hover {
   cursor: pointer;
@@ -59,6 +61,7 @@ a {
   right: 0;
   height: 50vh;
   overflow: hidden;
+  z-index: -1;
   
   
 }
@@ -72,9 +75,6 @@ a {
 /* ipad  */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1199px) and (-webkit-min-device-pixel-ratio: 1) {
 
-  .headshot{
-    width: 30% !important;
-  }
   h1 {
     font-size: 5rem;
     margin-bottom: 1rem;
