--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -18,8 +18,16 @@ section {
 h1 {
   font-size: 3rem;
   margin-bottom: 0.5rem;
+  animation: header-load 600ms
 }
 
+.name {
+  animation: header-load 400ms
+
+}
+.header p {
+  animation: header-load 900ms
+}
 p {
   margin: 0;
   font-size: 1rem;
@@ -37,7 +45,6 @@ button {
 	border: none;
 	padding: .5rem;
 	font: inherit;
-	/* width: fit-content; */
   border-radius: 15px;
   transition: all 300ms ease-in; 
   
@@ -71,6 +78,14 @@ a {
   max-height: 100%;
 }
 
+@keyframes header-load {
+  0% {
+    transform: translateY(-100%)
+  }
+  100% {
+    transform: translateY(0)
+  }
+}
 
 /* ipad  */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1199px) and (-webkit-min-device-pixel-ratio: 1) {
