--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -26,19 +26,17 @@ h1 {
 
 }
 .header p {
-  animation: header-load 900ms
-}
-p {
+  animation: header-load 900ms;
   margin: 0;
-  font-size: 1rem;
-
+  font-size: 1.5rem;
   overflow-wrap: break-word;
 }
+
 
 button {
   
   margin-top: 2rem;
-  display: block;
+  display: inline-block;
   
   background: none;
 	color: inherit;
