--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -33,7 +33,7 @@ h1 {
 }
 
 
-button {
+.header button {
   
   margin-top: 2rem;
   display: inline-block;
@@ -47,6 +47,10 @@ button {
   animation: button-hover-out 600ms;
   
   
+}
+
+.header a {
+  font-weight: 1000;
 }
 button:hover {
   cursor: pointer;
@@ -133,6 +137,11 @@ a {
   }
   h3 {
     font-size: 3rem;
+  }
+
+  .header a {
+    font-size: 2rem;
+    font-weight: 1000;
   }
 }
 
