--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -119,7 +119,7 @@ a {
 }
 
 /* ipad  */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1199px) and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-device-width: 768px) and (-webkit-min-device-pixel-ratio: 1) {
 
   h1 {
     font-size: 5rem;
@@ -144,7 +144,14 @@ a {
     font-weight: 1000;
   }
 }
+@media only screen and (min-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+.intro {
+  margin-top: 8rem;
+  margin-left: 4rem;
+  margin-right: 4rem;
+}
 
+}
 @media screen and (min-device-width: 1200px) {
   h3 {
     font-size: 2rem;
