--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -5,6 +5,7 @@
   width: 20rem;
   border-radius: 1%;
   text-align: left;
+  margin-bottom: 1rem;
 }
 
 .card h1 {
@@ -21,6 +22,21 @@
   height: auto;
 }
 
+.card a {
+  font-weight: 1000;
+  
+}
+
+/* .card a:hover {
+  color: grey;
+} */
+
+.github-icon:hover{
+  color: grey;
+}
+
+
+
 
 /* ipad */
 
@@ -29,16 +45,24 @@
       flex-direction: row;
       align-items: center;
       width: 40rem;
+      margin-bottom: 5rem;
 
   }
 
+  .card a {
+    font-size: 1.5rem;
+    
+  }
+
   .card h3 {
-    font-size: 2rem;
+    font-size: 1.8rem;
     margin-top: 0;
   }
 
   .card img {
     height: 70%;
+    width: 55%;
+    margin-right: 1rem;
     /* width: 100%; */
   }
   .name-description {
@@ -50,6 +74,7 @@
   }
   .card p {
       font-size: 1.5rem;
+      /* margin-bottom: 0; */
   }
 }
 
@@ -61,7 +86,7 @@
 
 }
 .card img {
-  width: 60%;
+  width: 55%;
   height: 90%;
 }
 
