--- a/src/styles/experiencePage.css
+++ b/src/styles/experiencePage.css
@@ -7,6 +7,9 @@
   width: 100vw;
 }
 
+.experience-page h2 {
+  margin-top: 10rem;
+}
 /* ipad */
 
 @media only screen and (min-device-width: 768px) and (-webkit-min-device-pixel-ratio: 1) {
