--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,5 +1,5 @@
 section {
-  height: 100vh;
+  /* height: 100vh; */
   max-width: 100vw;
 }
 
@@ -15,6 +15,14 @@ section {
   position: relative;
 }
 
+.wave {
+  position: relative;
+  top: 15rem !important;
+  /* margin-top: 10rem;
+  margin-bottom: 10rem;
+  z-index: 10;
+  display: block; */
+}
 h1 {
   font-size: 3rem;
   margin-bottom: 0.5rem;
