--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -16,16 +16,18 @@ section {
 }
 
 .wave {
-  position: relative;
-  /* top: 30rem !important; */
   height: 100%;
   width: 100%;
-  bottom: -7rem;
-  /* margin-bottom: 50rem; */
-  /* margin-top: 10rem;
   
-  z-index: 10;
-  display: block; */
+  /* position: relative; */
+  /* margin-top: ; */
+  /* bottom: -20rem; */
+
+/*   
+  height: 50%;
+  width: 50%; */
+  /* bottom: -7rem; */
+
 }
 h1 {
   font-size: 3rem;
@@ -130,6 +132,12 @@ a {
   }
 }
 
+@media only screen and (max-device-width: 320px) and (-webkit-min-device-pixel-ratio: 1) {
+  .headshot {
+    display: none;
+  }
+
+}
 /* ipad  */
 @media only screen and (min-device-width: 768px) and (-webkit-min-device-pixel-ratio: 1) {
 
@@ -155,6 +163,10 @@ a {
     font-size: 2rem;
     font-weight: 1000;
   }
+
+  /* .wave {
+    bottom: -15rem;
+  } */
 }
 @media only screen and (min-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
 .intro {
