--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -37,7 +37,7 @@
   }
 
   .footer h3 {
-    font-size: 1.5arem;
+    font-size: 1.5rem;
     font-weight: 700;
     display: inline !important;
     float: left !important;
