--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,34 +1,22 @@
 section {
   /* height: 100vh; */
   max-width: 100vw;
+  max-height: 100vh;
 }
 
 .intro {
   margin: 1rem;
   min-height: 100vh;
+  max-height: 100vh;
 }
 .header {
   
   display: flex;
   flex-direction: column;
-  height: 100%;
+  max-height: 100%;
   position: relative;
 }
 
-.wave {
-  height: 100%;
-  width: 100%;
-  
-  /* position: relative; */
-  /* margin-top: ; */
-  /* bottom: -20rem; */
-
-/*   
-  height: 50%;
-  width: 50%; */
-  /* bottom: -7rem; */
-
-}
 h1 {
   font-size: 3rem;
   margin-bottom: 0.5rem;
@@ -146,6 +134,11 @@ a {
     margin-bottom: 1rem;
   }
 
+  .headshot {
+    height: 60vh;
+    width: 80vw;
+    
+  }
   button {
     margin-top: 2rem;
     display: inline-block;
@@ -164,9 +157,7 @@ a {
     font-weight: 1000;
   }
 
-  /* .wave {
-    bottom: -15rem;
-  } */
+  
 }
 @media only screen and (min-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
 .intro {
@@ -181,11 +172,11 @@ a {
     font-size: 2rem;
     margin-bottom: 1rem;
   }
-  .headshot {
+  /* .headshot {
     height: 70vh;
     width: 90vw;
     
-  }
+  } */
   button {
     margin-top: 2rem;
     display: inline-block;
