--- a/src/styles/experiencePage.css
+++ b/src/styles/experiencePage.css
@@ -1,5 +1,7 @@
 .wave {
   margin-top: -4rem;
+  height: 100%;
+  width: 100%;
 }
 
 .experience-page {
@@ -31,3 +33,10 @@
    margin-top: -6rem;
  }
 }
+
+@media only screen and (min-device-width: 1200px) and (-webkit-min-device-pixel-ratio: 1) { 
+
+  .wave {
+    margin-top: -9rem;
+  }
+} 
