--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,11 +1,14 @@
 section {
   /* height: 100vh; */
   max-width: 100vw;
+  min-height: 100vh;
+  max-height: 100vh;
 }
 
 .intro {
   margin: 1rem;
   min-height: 100vh;
+  max-height: 100%;
 }
 .header {
   
@@ -13,22 +16,9 @@ section {
   flex-direction: column;
   height: 100%;
   position: relative;
+  max-height: 100%;
 }
 
-.wave {
-  height: 100%;
-  width: 100%;
-  
-  /* position: relative; */
-  /* margin-top: ; */
-  /* bottom: -20rem; */
-
-/*   
-  height: 50%;
-  width: 50%; */
-  /* bottom: -7rem; */
-
-}
 h1 {
   font-size: 3rem;
   margin-bottom: 0.5rem;
@@ -164,9 +154,6 @@ a {
     font-weight: 1000;
   }
 
-  /* .wave {
-    bottom: -15rem;
-  } */
 }
 @media only screen and (min-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
 .intro {
