--- a/src/styles/projectCard.css
+++ b/src/styles/projectCard.css
@@ -27,9 +27,6 @@
   
 }
 
-/* .card a:hover {
-  color: grey;
-} */
 
 .github-icon:hover{
   color: grey;
@@ -63,7 +60,7 @@
     height: 70%;
     width: 55%;
     margin-right: 1rem;
-    /* width: 100%; */
+    
   }
   .name-description {
     height: auto;
@@ -74,7 +71,7 @@
   }
   .card p {
       font-size: 1.5rem;
-      /* margin-bottom: 0; */
+      
   }
 }
 
@@ -102,4 +99,11 @@
 }
 
   
+}
+
+@media only screen and (max-device-height: 568px) and (-webkit-min-device-pixel-ratio: 1) {
+
+  .card {
+    margin-bottom: 2rem;
+  }
 }
